fix(link): align launch icon to the link text

--- a/packages/core/src/components/link/index.scss
+++ b/packages/core/src/components/link/index.scss
@@ -40,6 +40,7 @@
 }
 
 @mixin launch {
+	display: inline-flex;
 	margin-left: 1px;
 	font-size: 0.875em;
 }
